[OpenCL] OpenCL GPU wrappers added
Created OpenCL wrappers for the following:
- Context
- Command queue
- Kernel
- Program
- Buffer

Added operation interface to handle the flow of operation

** Self-evaluation**
1. Build test: [X]Passed [ ]Failed [ ]Skipped
2. Run test:   [X]Passed [ ]Failed [ ]Skipped

Signed-off-by: Debadri Samaddar <s.debadri@samsung.com>

--- a/nntrainer/meson.build
+++ b/nntrainer/meson.build
@@ -42,7 +42,8 @@ nntrainer_elements = [
   'optimizers',
   'tensor',
   'utils',
-  'graph'
+  'graph',
+  'opencl'
 ]
 
 foreach elem : nntrainer_elements
