[OpenCL] enable-opencl flag added to build option
enable-opencl flag added which defines ENABLE_OPENCL macro internally.
Fixed clang issues.

** Self-evaluation**
1. Build test: [X]Passed [ ]Failed [ ]Skipped
2. Run test:   [X]Passed [ ]Failed [ ]Skipped

Signed-off-by: Debadri Samaddar <s.debadri@samsung.com>

--- a/nntrainer/meson.build
+++ b/nntrainer/meson.build
@@ -42,9 +42,12 @@ nntrainer_elements = [
   'optimizers',
   'tensor',
   'utils',
-  'graph',
-  'opencl'
+  'graph'
 ]
+
+if get_option('enable-opencl')
+  nntrainer_elements += 'opencl'
+endif
 
 foreach elem : nntrainer_elements
   subdir(elem)
