[OpenCL]Refactored example tensor GPU ops
Refactored GPU SGEMV ops at tensor level.
Modified tensor.h and tensor.cpp to remove GPU info.
Renamed headers of OpenCL wrappers and added opencl namespace.

Signed-off-by: Debadri Samaddar <s.debadri@samsung.com>

--- a/nntrainer/opencl/meson.build
+++ b/nntrainer/opencl/meson.build
@@ -10,7 +10,11 @@ opencl_sources = [
 
 opencl_headers = [
   'third_party/cl_platform.h',
-  'opencl_op_interface.hpp'
+  'opencl_op_interface.h',
+  'opencl_command_queue_manager.h',
+  'opencl_context_manager.h',
+  'opencl_kernel.h',
+  'opencl_program.h'
 ]
 
 foreach s : opencl_sources
