[GPU] Added cl_context and compute engine information
Created enum LayerComputeEngine at layer.h API level
Modified layer.h, factory.cpp, layer_node.h/cpp to propagate compute engine information
Added cl_context to handle global configuration of OpenCL environment
Modified RunLayerContext to enable getter/setter for compute engine
Added kernel creation utility in RunLayerContext
Used FullyConnected layer as example for propagating compute info

Signed-off-by: Debadri Samaddar <s.debadri@samsung.com>

--- a/nntrainer/meson.build
+++ b/nntrainer/meson.build
@@ -61,6 +61,11 @@ nntrainer_common_sources = [
   'app_context.cpp'
 ]
 
+if get_option('enable-opencl')
+  nntrainer_headers += meson.current_source_dir() / 'cl_context.h'
+  nntrainer_common_sources += 'cl_context.cpp'
+endif
+
 foreach s : nntrainer_common_sources
   nntrainer_sources += meson.current_source_dir() / s
 endforeach
