--- a/meson_options.txt
+++ b/meson_options.txt
@@ -16,6 +16,7 @@ option('enable-tflite-interpreter', type: 'boolean', value: true)
 option('enable-memory-swap', type: 'boolean', value: false)
 option('memory-swap-path', type: 'string', value: '')
 option('test-timeout', type: 'integer', value: 60)
+option('opencl-kernel-path', type: 'string', value: 'nntrainer_opencl_kernels')
 
 # dependency conflict resolution
 option('capi-ml-inference-actual', type: 'string', value: 'capi-ml-inference',
@@ -40,7 +41,7 @@ option('enable-cublas', type: 'boolean', value: false)
 option('enable-openmp', type: 'boolean', value: true)
 option('enable-neon', type: 'boolean', value: false)
 option('enable-avx', type: 'boolean', value: false)
-option('enable-opencl', type: 'boolean', value: false)
+option('enable-opencl', type: 'boolean', value: true)
 
 # ml-api dependency (to enable, install capi-inference from github.com/nnstreamer/api )
 # To inter-operate with nnstreamer and ML-API packages, you need to enable this.
